@@ -23,7 +23,7 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
     meds <- (qc$uMed + qc$mMed)/2
     keepIndex <- which(meds > badSampleCutoff)
     if(length(keepIndex) == 0 && removeBadSamples) stop("All samples found to be bad")
-    if(length(keepIndex) < ncol(object) && removeBadSample) {
+    if(length(keepIndex) < ncol(object) && removeBadSamples) {
         if(verbose) cat(sprintf("[preprocessQuantile] Found and removed %s bad samples.\n",
                                 ncol(object) - length(keepIndex)))
         object <- object[, keepIndex]
